[FEAT/KAN-152] 고객사 환경 내 활성화된 EC2 리스트 조회 기능 구현